Ready to broadcast pages (todo: replace og img url to conf.mediascope.net)

--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -18,14 +18,14 @@ block vars
 		var ms_about_title = "About the conference"
 		var ms_about_text = "2020 has been a special year for everyone. The technological transformation has become a key strategic objective for majority of businesses in media and advertising market.</p><p>During this year we have done a lot to support you - our clients, in addressing the challenges of today and tomorrow.</p><p>We will be happy to share our ideas and vision with you at our annual Clients Conference which will be held online on 1 December 2020.</p><p>We invite you to register for our event and look forward to seeing you online on 1 December!"
 		
-		var broadcast_info = "The conference broadcast will take place on this website on December 1, 2020 and will start at 11:00am Moscow time. See you soon!"
+		var broadcast_info = "Our conference can be viewed on the website here and also on the Youtube channel. You can choose<br>the most convinient option."
 		var broadcast_site = "Conference website"
 		var broadcast_title = "Broadcast"
-		var broadcast_player_select0 = "Media player"
-		var broadcast_player_select1 = "Media player 1"
-		var broadcast_player_select2 = "Media player 2"
 		var broadcast_review = "Please rate the speakers"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLSdIx30Q5zMmWtQKHZG55eM1FhRRv0VdDPZkAljXSXpirXSd9A/viewform"
+		var broadcast_tg = "Ask a question in telegram"
+		var broadcast_video_url = "https://youtu.be/BziojwBgTRw"
+		var broadcast_youtube_url = broadcast_video_url
 
 		var r_tagiev = "Ruslan&nbsp;<br>Tagiev"
 		var r_tagiev_vocation = "CEO Mediascope"
