--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -18,14 +18,14 @@ block vars
 		var ms_about_title = "О конференции"
 		var ms_about_text = "2020 год для всех особенный. Технологическая трансформация стала одной из стратегически важных составляющих для большинства компаний и бизнесов.</p><p>За этот год мы сделали многое для того, чтобы наши клиенты смогли в будущем строить свой бизнес и принимать решения на основе синтеза огромного опыта Mediascope в медиаисследованиях и лучших технологий в области работы с данными.</p><p>Мы будем рады подробнее рассказать об этом на нашей конференции 1 декабря <nobr>2020 года</nobr>.</p><p>В этом году наше мероприятие состоится в онлайн-формате. Посмотреть трансляцию вы сможете по предварительной регистрации.</p><p>До встречи 1 декабря!"
 		
-		var broadcast_info = "Трансляция будет проходить одновременно на нескольких площадках, и вы можете выбрать наиболее удобную для Вас. 1 декабря в 11:00 стартует наш эфир. До встречи!"
+		var broadcast_info = "Наша трансляция проходит одновременно<br>на нескольких площадках, и вы можете выбрать наиболее удобную для Вас."
 		var broadcast_site = "Сайт конференции"
 		var broadcast_title = "Трансляция"
-		var broadcast_player_select0 = "Выбрать плеер"
-		var broadcast_player_select1 = "Плеер 1"
-		var broadcast_player_select2 = "Плеер 2"
 		var broadcast_review = "Оценить спикеров"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLScdv6PY9QpsafOz-atbsIqkr21OzdAi-SQ--2DdF6jao0Ad_A/viewform"
+		var broadcast_tg = "Задать вопрос в телеграмм"
+		var broadcast_video_url = "https://youtu.be/Kwohz2deZ0I"
+		var broadcast_youtube_url = broadcast_video_url
 
 		var r_tagiev = "Руслан&nbsp;<br>Тагиев"
 		var r_tagiev_vocation = "генеральный директор&nbsp;<br>Mediascope"
