--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -23,7 +23,7 @@ block vars
 		var broadcast_title = "Трансляция"
 		var broadcast_review = "Оценить спикеров"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLScdv6PY9QpsafOz-atbsIqkr21OzdAi-SQ--2DdF6jao0Ad_A/viewform"
-		var broadcast_tg = "Задать вопрос в телеграмм"
+		var broadcast_tg = "Задать вопрос в Telegram"
 		var broadcast_video_url = "https://youtu.be/Kwohz2deZ0I"
 		var broadcast_youtube_url = broadcast_video_url
 
