--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -23,7 +23,7 @@ block vars
 		var broadcast_title = "Broadcast"
 		var broadcast_review = "Please rate the speakers"
 		var broadcast_review_url = "https://docs.google.com/forms/d/e/1FAIpQLSdIx30Q5zMmWtQKHZG55eM1FhRRv0VdDPZkAljXSXpirXSd9A/viewform"
-		var broadcast_tg = "Ask a question in telegram"
+		var broadcast_tg = "Ask a question in Telegram"
 		var broadcast_video_url = "https://youtu.be/BziojwBgTRw"
 		var broadcast_youtube_url = broadcast_video_url
 
