Materials and Publications ready

--- a/src/pug/en/index.pug
+++ b/src/pug/en/index.pug
@@ -27,30 +27,32 @@ block vars
 		var broadcast_video_url = "https://youtu.be/BziojwBgTRw"
 		var broadcast_youtube_url = broadcast_video_url
 
-		var r_tagiev = "Ruslan&nbsp;<br>Tagiev"
+		var download_pdf = "Download PDF"
+
+		var r_tagiev = "Ruslan Tagiev"
 		var r_tagiev_vocation = "CEO Mediascope"
 		var r_tagiev_speech = "Welcome"
 
-		var k_achkasova = "Ksenia&nbsp;<br>Achkasova"
+		var k_achkasova = "Ksenia Achkasova"
 		var k_achkasova_vocation = "COO Mediascope"
-		var k_achkasova_speech = "Results 2020. Plans 2021"
+		var k_achkasova_speech = "Results 2020.<br>Plans 2021"
 		var k_achkasova_details = "Media research development, hybrid approach and big data in research"
 
-		var m_pikuleva = "Marina&nbsp;<br>Pikuleva"
-		var m_pikuleva_vocation = "Custom Media&nbsp;<br>Research Director Mediascope"
-		var m_pikuleva_speech = "BrandPulse: one year later"
+		var m_pikuleva = "Marina Pikuleva"
+		var m_pikuleva_vocation = "Custom Media Research Director Mediascope"
+		var m_pikuleva_speech = "BrandPulse:<br>one year later"
 		var m_pikuleva_details = "New opportunities for analyzing consumer markets"
-		var o_starostina = "Olesya&nbsp;<br>Starostina"
-		var o_starostina_vocation = "Projects Lead&nbsp;<br>Mediascope"
+		var o_starostina = "Olesya Starostina"
+		var o_starostina_vocation = "Projects Lead Mediascope"
 
-		var l_gleizer = "Lev&nbsp;<br>Gleizer"
+		var l_gleizer = "Lev Gleizer"
 		var l_gleizer_vocation = "CIO Mediascope"
 		var l_gleizer_speech = "Alpaca and Capybaras"
 		var l_gleizer_details = "How the production of heterogeneous data comes to a single model, and personalization becomes part of analytics"
 
-		var m_zotov = "Mikhail&nbsp;<br>Zotov"
+		var m_zotov = "Mikhail Zotov"
 		var m_zotov_vocation = "Commercial Director Mediascope"
-		var m_zotov_speech = "The Ultimate Question …42!"
+		var m_zotov_speech = "The Ultimate<br>Question …42!"
 		var m_zotov_details = "How the Mediascope's new technologies help Media to better understand the path, attention and actions of a person"
 
 
