--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,29 +27,31 @@ block vars
 		var broadcast_video_url = "https://youtu.be/Kwohz2deZ0I"
 		var broadcast_youtube_url = broadcast_video_url
 
-		var r_tagiev = "Руслан&nbsp;<br>Тагиев"
-		var r_tagiev_vocation = "генеральный директор&nbsp;<br>Mediascope"
+		var download_pdf = "Скачать презентацию в PDF"
+
+		var r_tagiev = "Руслан Тагиев"
+		var r_tagiev_vocation = "генеральный директор Mediascope"
 		var r_tagiev_speech = "Приветственное слово"
 
-		var k_achkasova = "Ксения&nbsp;<br>Ачкасова"
-		var k_achkasova_vocation = "исполнительный директор&nbsp;<br>Mediascope"
-		var k_achkasova_speech = "Итоги 2020. Планы 2021"
+		var k_achkasova = "Ксения Ачкасова"
+		var k_achkasova_vocation = "исполнительный директор Mediascope"
+		var k_achkasova_speech = "Итоги 2020.<br>Планы 2021"
 		var k_achkasova_details = "Развитие медиаизмерений, гибридные подходы и большие данные в исследованиях"
 
-		var m_pikuleva = "Марина&nbsp;<br>Пикулева"
-		var m_pikuleva_vocation = "директор по специальным&nbsp;<br>исследованиям Mediascope"
-		var m_pikuleva_speech = "BrandPulse: год спустя"
+		var m_pikuleva = "Марина Пикулева"
+		var m_pikuleva_vocation = "директор по специальным исследованиям Mediascope"
+		var m_pikuleva_speech = "BrandPulse:<br>год спустя"
 		var m_pikuleva_details = "Новые возможности для анализа потребительских рынков"
-		var o_starostina = "Олеся&nbsp;<br>Старостина"
-		var o_starostina_vocation = "руководитель&nbsp;<br>проектов Mediascope"
+		var o_starostina = "Олеся Старостина"
+		var o_starostina_vocation = "руководитель проектов Mediascope"
 
-		var l_gleizer = "Лев&nbsp;<br>Глейзер"
-		var l_gleizer_vocation = "директор по информационным&nbsp;<br>технологиям Mediascope"
+		var l_gleizer = "Лев Глейзер"
+		var l_gleizer_vocation = "директор по информационным технологиям Mediascope"
 		var l_gleizer_speech = "Альпака и капибары"
 		var l_gleizer_details = "Как производство разнородных данных приходит к единой модели, а персонализация становится частью аналитики"
 
-		var m_zotov = "Михаил&nbsp;<br>Зотов"
-		var m_zotov_vocation = "коммерческий директор&nbsp;<br>Mediascope"
+		var m_zotov = "Михаил Зотов"
+		var m_zotov_vocation = "коммерческий директор Mediascope"
 		var m_zotov_speech = "Главный вопрос…42!"
 		var m_zotov_details = "Как новые технологии Mediascope помогут медиа лучше изучить путь, внимание и действия человека"
 
